add more filters

--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,25 @@
 <html>
 
-
+<head>
+	
+	
+</head>
 
 
 <body>
-<!-- This comment should be removed -->
-<!-- So should this one -->
+<!-- content -->
 	<h1>PageSpeed Demo</h1>
 
 					<p>This is a demo of the PageSpeed module, as you can see
 it is trimming space between tags.
 </p>
 
+<!-- dependencies -->
 <script src="bower_components/underscore/underscore.js"></script>
 <script src="bower_components/backbone/backbone.js"></script>
+
+<!-- app -->
 <script src="main.js"></script>
-test
+
 </body>
 </html>
